Add basic structure and content for index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Neonox Gas Tech</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f4f6f8;
+            color: #333;
+        }
+        header {
+            background-color: #003366;
+            color: white;
+            padding: 30px;
+            text-align: center;
+        }
+        section {
+            padding: 30px;
+            max-width: 1000px;
+            margin: auto;
+            background: white;
+            margin-top: 20px;
+            border-radius: 6px;
+        }
+        h2 {
+            color: #003366;
+        }
+        footer {
+            background-color: #003366;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            margin-top: 30px;
+        }
+    </style>
+</head>
+
+<body>
+
+<header>
+    <h1>Neonox Gas Tech</h1>
+    <p>High-purity gas pipeline solutions with precision orbital welding</p>
+</header>
+
+<section>
+    <h2>About Us</h2>
+    <p>
+        Neonox Gas Tech specializes in orbital welding, high-purity gas pipeline
+        fabrication, and industrial gas systems for critical applications.
+    </p>
+</section>
+
+<section>
+    <h2>Our Services</h2>
+    <ul>
+        <li>Orbital Welding (1/8” – 1/2” SS Tubes)</li>
+        <li>High-Purity Gas Pipeline Installation</li>
+        <li>Industrial Gas Manifold Systems</li>
+        <li>TIG Welding for SS & Alloy Piping</li>
+        <li>Specialty & Hazardous Gas Piping</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Contact Us</h2>
+    <p><strong>Phone:</strong> +91-XXXXXXXXXX</p>
+    <p><strong>Email:</strong> yourname@company.com</p>
+    <p><strong>Location:</strong> India</p>
+</section>
+
+<footer>
+    <p>© 2025 Neonox Gas Tech. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
 
