Add 'Why Choose Neonox Gas Tech' section to index.html

--- a/index.html
+++ b/index.html
@@ -11,3 +11,15 @@
     and international quality standards.
   </p>
 </section>
+<section id="why-us">
+  <h2>Why Choose Neonox Gas Tech</h2>
+  <ul>
+    <li>Certified and experienced orbital welding professionals</li>
+    <li>High-purity, leak-proof pipeline execution</li>
+    <li>Advanced orbital welding and TIG equipment</li>
+    <li>Strict safety and compliance standards</li>
+    <li>On-time project delivery</li>
+    <li>Cost-effective engineering solutions</li>
+  </ul>
+</section>
+
