Add services and contact sections to index.html
Added a services section detailing various offerings and a contact section with phone, email, and location information. Included a WhatsApp link for easy contact.

--- a/index.html
+++ b/index.html
@@ -22,4 +22,46 @@
     <li>Cost-effective engineering solutions</li>
   </ul>
 </section>
+<section id="services">
+  <h2>Our Services</h2>
+  <ul>
+    <li>Orbital Welding (1/8” to 1/2” SS Tubes)</li>
+    <li>High-Purity Stainless Steel Gas Pipelines</li>
+    <li>Industrial Gas Manifold Design & Installation</li>
+    <li>TIG Welding for Stainless Steel & Alloy Piping</li>
+    <li>Medical Gas Pipeline Systems (MGPS)</li>
+    <li>Specialty & Hazardous Gas Piping</li>
+    <li>Pressure Testing, Commissioning & AMC</li>
+  </ul>
+
+  <p><strong>Gases handled:</strong> Oxygen, Nitrogen, Argon, CO₂, Hydrogen,
+  Helium, SF₆, Carbon Monoxide, Methane, Ethylene, Hydrocarbons.</p>
+</section>
+<section id="contact">
+  <h2>Contact Us</h2>
+  <p><strong>Phone:</strong> +91-8867123061</p>
+  <p><strong>Email:</strong> neonoxgastech@gmail.com</p>
+  <p><strong>Location:</strong> India</p>
+
+  <p>
+    <strong>For quotations and project discussions, please contact us.</strong>
+  </p>
+</section>
+<a href="https://wa.me/91XXXXXXXXXX" target="_blank"
+style="
+position:fixed;
+bottom:20px;
+right:20px;
+background:#25D366;
+color:white;
+padding:14px 20px;
+border-radius:50px;
+text-decoration:none;
+font-weight:bold;
+box-shadow:0 6px 15px rgba(0,0,0,0.3);
+z-index:1000;">
+WhatsApp Us
+</a>
+
+
 
