Add working contact form

--- a/index.html
+++ b/index.html
@@ -44,24 +44,30 @@
   <p><strong>Location:</strong> India</p>
 
   <p>
-    <strong>For quotations and project discussions, please contact us.</strong>
+    <strong><section id="contact">
+  <h2>Contact Us</h2>
+  <p>Need a quotation or project support? Reach out to us.</p>
+
+  <form action="https://formspree.io/f/xqarvayz" method="POST">
+    
+    <input type="text" name="name" placeholder="Your Name" required>
+
+    <input type="email" name="email" placeholder="Your Email" required>
+
+    <input type="text" name="phone" placeholder="Phone Number">
+
+    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+
+    <button type="submit">Send Message</button>
+  </form>
+
+  <p style="margin-top:15px;">
+    📧 Email: neonoxgastech@gmail.com <br>
+    📞 Phone: +91-886712061
   </p>
 </section>
-<a href="https://wa.me/91XXXXXXXXXX" target="_blank"
-style="
-position:fixed;
-bottom:20px;
-right:20px;
-background:#25D366;
-color:white;
-padding:14px 20px;
-border-radius:50px;
-text-decoration:none;
-font-weight:bold;
-box-shadow:0 6px 15px rgba(0,0,0,0.3);
-z-index:1000;">
-WhatsApp Us
-</a>
+
+
 
 
 
