Refactor content and styles in index.html
Updated the content and formatting of the 'About Us', 'Our Services', and 'Contact Us' sections in index.html.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <section id="about">
   <h2>About Us</h2>
   <p>
-    <strong>Neonox Gas Tech</strong> specializes in high-precision orbital welding,
-    stainless steel gas pipeline fabrication, and industrial gas systems for
-    high-purity and hazardous gas applications.
+    <strong>Neonox Gas Tech</strong> specializes in high-precision orbital welding
+    and gas pipeline systems for high-purity and hazardous gas applications.
   </p>
   <p>
     We deliver turnkey solutions including design, fabrication, installation,
@@ -11,6 +10,7 @@
     and international quality standards.
   </p>
 </section>
+
 <section id="why-us">
   <h2>Why Choose Neonox Gas Tech</h2>
   <ul>
@@ -22,6 +22,7 @@
     <li>Cost-effective engineering solutions</li>
   </ul>
 </section>
+
 <section id="services">
   <h2>Our Services</h2>
   <ul>
@@ -34,38 +35,44 @@
     <li>Pressure Testing, Commissioning & AMC</li>
   </ul>
 
-  <p><strong>Gases handled:</strong> Oxygen, Nitrogen, Argon, CO₂, Hydrogen,
-  Helium, SF₆, Carbon Monoxide, Methane, Ethylene, Hydrocarbons.</p>
-</section>
-<section id="contact">
-  <h2>Contact Us</h2>
-  <p><strong>Phone:</strong> +91-8867123061</p>
-  <p><strong>Email:</strong> neonoxgastech@gmail.com</p>
-  <p><strong>Location:</strong> India</p>
-
   <p>
-    <strong><section id="contact">
+    <strong>Gases handled:</strong>
+    Oxygen, Nitrogen, Argon, CO₂, Hydrogen, Helium, SF₆,
+    Carbon Monoxide, Methane, Ethylene, Hydrocarbons.
+  </p>
+</section>
+
+<section id="contact">
   <h2>Contact Us</h2>
   <p>Need a quotation or project support? Reach out to us.</p>
 
-  <form action="https://formspree.io/f/xqarvayz" method="POST">
+  <form action="https://formspree.io/f/xqarvayz" method="POST" style="max-width:400px;">
     
-    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="text" name="name" placeholder="Your Name" required
+           style="width:100%; padding:10px; margin-bottom:10px;">
 
-    <input type="email" name="email" placeholder="Your Email" required>
+    <input type="email" name="email" placeholder="Your Email" required
+           style="width:100%; padding:10px; margin-bottom:10px;">
 
-    <input type="text" name="phone" placeholder="Phone Number">
+    <input type="text" name="phone" placeholder="Phone Number"
+           style="width:100%; padding:10px; margin-bottom:10px;">
 
-    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+    <textarea name="message" rows="5" placeholder="Your Message" required
+              style="width:100%; padding:10px; margin-bottom:10px;"></textarea>
 
-    <button type="submit">Send Message</button>
+    <button type="submit"
+            style="padding:10px 20px; background:#0a4da3; color:white; border:none;">
+      Send Message
+    </button>
   </form>
 
   <p style="margin-top:15px;">
     📧 Email: neonoxgastech@gmail.com <br>
-    📞 Phone: +91-886712061
+    📞 Phone: +91-8867123061 <br>
+    📍 Location: India
   </p>
 </section>
+
 
 
 
