--- a/index.html
+++ b/index.html
@@ -1,80 +1,172 @@
-<section id="about">
-  <h2>About Us</h2>
-  <p>
-    <strong>Neonox Gas Tech</strong> specializes in high-precision orbital welding
-    and gas pipeline systems for high-purity and hazardous gas applications.
-  </p>
-  <p>
-    We deliver turnkey solutions including design, fabrication, installation,
-    testing, and commissioning with a strong focus on safety, accuracy,
-    and international quality standards.
-  </p>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Neonox Gas Tech</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<section id="why-us">
-  <h2>Why Choose Neonox Gas Tech</h2>
-  <ul>
-    <li>Certified and experienced orbital welding professionals</li>
-    <li>High-purity, leak-proof pipeline execution</li>
-    <li>Advanced orbital welding and TIG equipment</li>
-    <li>Strict safety and compliance standards</li>
-    <li>On-time project delivery</li>
-    <li>Cost-effective engineering solutions</li>
-  </ul>
-</section>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      line-height: 1.6;
+      color: #333;
+    }
 
-<section id="services">
-  <h2>Our Services</h2>
-  <ul>
-    <li>Orbital Welding (1/8” to 1/2” SS Tubes)</li>
-    <li>High-Purity Stainless Steel Gas Pipelines</li>
-    <li>Industrial Gas Manifold Design & Installation</li>
-    <li>TIG Welding for Stainless Steel & Alloy Piping</li>
-    <li>Medical Gas Pipeline Systems (MGPS)</li>
-    <li>Specialty & Hazardous Gas Piping</li>
-    <li>Pressure Testing, Commissioning & AMC</li>
-  </ul>
+    header {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      padding: 20px;
+      border-bottom: 1px solid #eee;
+      background: #ffffff;
+    }
 
-  <p>
-    <strong>Gases handled:</strong>
-    Oxygen, Nitrogen, Argon, CO₂, Hydrogen, Helium, SF₆,
-    Carbon Monoxide, Methane, Ethylene, Hydrocarbons.
-  </p>
-</section>
+    header img {
+      height: 70px;
+      width: auto;
+    }
 
-<section id="contact">
-  <h2>Contact Us</h2>
-  <p>Need a quotation or project support? Reach out to us.</p>
+    header h1 {
+      margin: 0;
+      color: #0a4da3;
+    }
 
-  <form action="https://formspree.io/f/xqarvayz" method="POST" style="max-width:400px;">
-    
-    <input type="text" name="name" placeholder="Your Name" required
-           style="width:100%; padding:10px; margin-bottom:10px;">
+    header p {
+      margin: 4px 0 0;
+      font-size: 14px;
+      color: #555;
+    }
 
-    <input type="email" name="email" placeholder="Your Email" required
-           style="width:100%; padding:10px; margin-bottom:10px;">
+    section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
 
-    <input type="text" name="phone" placeholder="Phone Number"
-           style="width:100%; padding:10px; margin-bottom:10px;">
+    section h2 {
+      color: #0a4da3;
+      margin-bottom: 15px;
+    }
 
-    <textarea name="message" rows="5" placeholder="Your Message" required
-              style="width:100%; padding:10px; margin-bottom:10px;"></textarea>
+    ul {
+      padding-left: 20px;
+    }
 
-    <button type="submit"
-            style="padding:10px 20px; background:#0a4da3; color:white; border:none;">
-      Send Message
-    </button>
-  </form>
+    li {
+      margin-bottom: 8px;
+    }
 
-  <p style="margin-top:15px;">
-    📧 Email: neonoxgastech@gmail.com <br>
-    📞 Phone: +91-8867123061 <br>
-    📍 Location: India
-  </p>
-</section>
+    #contact {
+      background: #f7f9fc;
+    }
 
+    button {
+      cursor: pointer;
+    }
 
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #0a4da3;
+      color: white;
+    }
+  </style>
+</head>
 
+<body>
 
+  <!-- Header with Logo -->
+  <header>
+    <img src="Neonox_Gas.png" alt="Neonox Gas Tech Logo">
+    <div>
+      <h1>Neonox Gas Tech</h1>
+      <p>High-Precision Orbital Welding & Gas Pipeline Systems</p>
+    </div>
+  </header>
 
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Us</h2>
+    <p>
+      <strong>Neonox Gas Tech</strong> specializes in high-precision orbital welding
+      and gas pipeline systems for high-purity and hazardous gas applications.
+    </p>
+    <p>
+      We deliver turnkey solutions including design, fabrication, installation,
+      testing, and commissioning with a strong focus on safety, accuracy,
+      and international quality standards.
+    </p>
+  </section>
 
+  <!-- Why Choose Us -->
+  <section id="why-us">
+    <h2>Why Choose Neonox Gas Tech</h2>
+    <ul>
+      <li>Certified and experienced orbital welding professionals</li>
+      <li>High-purity, leak-proof pipeline execution</li>
+      <li>Advanced orbital welding and TIG equipment</li>
+      <li>Strict safety and compliance standards</li>
+      <li>On-time project delivery</li>
+      <li>Cost-effective engineering solutions</li>
+    </ul>
+  </section>
+
+  <!-- Services -->
+  <section id="services">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Orbital Welding (1/8” to 1/2” SS Tubes)</li>
+      <li>High-Purity Stainless Steel Gas Pipelines</li>
+      <li>Industrial Gas Manifold Design & Installation</li>
+      <li>TIG Welding for Stainless Steel & Alloy Piping</li>
+      <li>Medical Gas Pipeline Systems (MGPS)</li>
+      <li>Specialty & Hazardous Gas Piping</li>
+      <li>Pressure Testing, Commissioning & AMC</li>
+    </ul>
+
+    <p>
+      <strong>Gases handled:</strong>
+      Oxygen, Nitrogen, Argon, CO₂, Hydrogen, Helium, SF₆,
+      Carbon Monoxide, Methane, Ethylene, Hydrocarbons.
+    </p>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Need a quotation or project support? Reach out to us.</p>
+
+    <form action="https://formspree.io/f/xqarvayz" method="POST" style="max-width:400px;">
+      <input type="text" name="name" placeholder="Your Name" required
+             style="width:100%; padding:10px; margin-bottom:10px;">
+
+      <input type="email" name="email" placeholder="Your Email" required
+             style="width:100%; padding:10px; margin-bottom:10px;">
+
+      <input type="text" name="phone" placeholder="Phone Number"
+             style="width:100%; padding:10px; margin-bottom:10px;">
+
+      <textarea name="message" rows="5" placeholder="Your Message" required
+                style="width:100%; padding:10px; margin-bottom:10px;"></textarea>
+
+      <button type="submit"
+              style="padding:10px 20px; background:#0a4da3; color:white; border:none;">
+        Send Message
+      </button>
+    </form>
+
+    <p style="margin-top:15px;">
+      📧 Email: neonoxgastech@gmail.com <br>
+      📞 Phone: +91-8867123061 <br>
+      📍 Location: India
+    </p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    © 2025 Neonox Gas Tech. All Rights Reserved.
+  </footer>
+
+</body>
+</html>
