--- a/index.html
+++ b/index.html
@@ -1,228 +1,241 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Neonox Gas Tech</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Neonox Gas Tech | High-Purity Gas Pipeline Solutions</title>
 
-<style>
-* {
-  box-sizing: border-box;
-}
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-body {
-  margin: 0;
-  font-family: "Segoe UI", Arial, sans-serif;
-  background: #eef2f7;
-  color: #222;
-  line-height: 1.6;
-}
+    body {
+      background: #f4f7fb;
+      color: #222;
+      line-height: 1.6;
+    }
 
-/* HERO WITH 3D BACKGROUND */
-.hero {
-  background:
-    radial-gradient(circle at top, rgba(255,255,255,0.25), transparent 60%),
-    linear-gradient(135deg, #062f6e, #0a4da3);
-  color: white;
-  text-align: center;
-  padding: 50px 20px 45px;
-  position: relative;
-}
+    /* HERO SECTION */
+    .hero {
+      background: linear-gradient(135deg, #003a8f, #005fcc);
+      padding: 70px 20px 80px;
+      text-align: center;
+      color: #fff;
+    }
 
-/* LOGO – UNCHANGED */
-.hero img {
-  width: 150px;
-  margin-bottom: 12px;
-  filter: drop-shadow(0 14px 22px rgba(0,0,0,0.45));
-}
+    .hero img {
+      max-width: 160px;
+      margin-bottom: 20px;
+      background: #fff;
+      padding: 12px;
+      border-radius: 12px;
+      box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+    }
 
-.hero h1 {
-  margin: 6px 0 6px;
-  font-size: 34px;
-  font-weight: 700;
-}
+    .hero h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
 
-.hero p {
-  margin: 0;
-  font-size: 17px;
-  opacity: 0.95;
-}
+    .hero p {
+      font-size: 18px;
+      opacity: 0.95;
+    }
 
-/* NAV */
-nav {
-  background: #052857;
-  padding: 10px;
-  text-align: center;
-}
+    /* NAV */
+    nav {
+      background: #002e6d;
+      padding: 12px;
+      text-align: center;
+    }
 
-nav a {
-  color: white;
-  text-decoration: none;
-  margin: 0 14px;
-  font-weight: 600;
-}
+    nav a {
+      color: #fff;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
 
-/* SECTIONS */
-section {
-  max-width: 1100px;
-  margin: 20px auto;
-  background: white;
-  padding: 22px 26px;
-  border-radius: 10px;
-  box-shadow: 0 10px 22px rgba(0,0,0,0.08);
-}
+    nav a:hover {
+      text-decoration: underline;
+    }
 
-h2 {
-  margin-bottom: 8px;
-  color: #062f6e;
-  border-bottom: 3px solid #0a4da3;
-  display: inline-block;
-  padding-bottom: 4px;
-}
+    /* SECTIONS */
+    section {
+      max-width: 1100px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 35px;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+    }
 
-section p {
-  margin: 6px 0;
-}
+    section h2 {
+      color: #003a8f;
+      margin-bottom: 15px;
+      border-bottom: 3px solid #005fcc;
+      display: inline-block;
+      padding-bottom: 6px;
+    }
 
-ul {
-  padding-left: 18px;
-  margin: 8px 0;
-}
+    section p {
+      margin-bottom: 12px;
+    }
 
-li {
-  margin-bottom: 6px;
-}
+    ul {
+      margin-top: 10px;
+      padding-left: 20px;
+    }
 
-/* CONTACT FORM */
-form input,
-form textarea {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-}
+    ul li {
+      margin-bottom: 8px;
+    }
 
-form button {
-  background: #0a4da3;
-  color: white;
-  border: none;
-  padding: 10px 26px;
-  font-size: 15px;
-  border-radius: 4px;
-  cursor: pointer;
-}
+    /* CONTACT FORM */
+    form input, form textarea {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 15px;
+    }
 
-form button:hover {
-  background: #083b80;
-}
+    form button {
+      background: #005fcc;
+      color: #fff;
+      border: none;
+      padding: 12px 25px;
+      font-size: 16px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
 
-/* FOOTER */
-footer {
-  background: #062f6e;
-  color: white;
-  text-align: center;
-  padding: 14px;
-  margin-top: 28px;
-  font-size: 14px;
-}
+    form button:hover {
+      background: #003a8f;
+    }
 
-/* WHATSAPP BUTTON */
-.whatsapp {
-  position: fixed;
-  bottom: 18px;
-  right: 18px;
-  background: #25D366;
-  color: white;
-  padding: 14px 18px;
-  border-radius: 30px;
-  text-decoration: none;
-  font-weight: bold;
-  box-shadow: 0 8px 18px rgba(0,0,0,0.35);
-  z-index: 1000;
-}
-</style>
+    /* WHATSAPP BUTTON */
+    .whatsapp {
+      position: fixed;
+      right: 20px;
+      bottom: 20px;
+      background: #25d366;
+      color: #fff;
+      padding: 14px 18px;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+      z-index: 999;
+    }
+
+    .whatsapp:hover {
+      background: #1ebe5d;
+    }
+
+    /* FOOTER */
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #002e6d;
+      color: #fff;
+      margin-top: 40px;
+    }
+
+    @media (max-width: 768px) {
+      .hero h1 {
+        font-size: 28px;
+      }
+    }
+  </style>
 </head>
 
 <body>
 
-<!-- HERO -->
-<div class="hero">
-  <img src="logo.png" alt="Neonox Gas Tech Logo">
-  <h1>Neonox Gas Tech</h1>
-  <p>High-purity gas pipeline solutions with precision orbital welding</p>
-</div>
+  <!-- HERO -->
+  <div class="hero">
+    <img src="logo-new.png" alt="Neonox Gas Tech Logo">
+    <h1>Neonox Gas Tech</h1>
+    <p>High-Purity Gas Pipeline Solutions with Precision Orbital Welding</p>
+  </div>
 
-<!-- NAV -->
-<nav>
-  <a href="#about">About</a>
-  <a href="#why">Why Us</a>
-  <a href="#services">Services</a>
-  <a href="#contact">Contact</a>
-</nav>
+  <!-- NAV -->
+  <nav>
+    <a href="#about">About</a>
+    <a href="#services">Services</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-<!-- ABOUT -->
-<section id="about">
-<h2>About Us</h2>
-<p><strong>Neonox Gas Tech</strong> specializes in high-precision orbital welding and gas pipeline systems for high-purity and hazardous gas applications.</p>
-<p>We deliver turnkey solutions covering design, fabrication, installation, testing, and commissioning with strong focus on safety, accuracy, and international quality standards.</p>
-</section>
+  <!-- ABOUT -->
+  <section id="about">
+    <h2>About Us</h2>
+    <p><strong>Neonox Gas Tech</strong> specializes in high-precision orbital welding and high-purity gas pipeline systems for hazardous and specialty gas applications.</p>
+    <p>We deliver complete turnkey solutions including design, fabrication, installation, testing, and commissioning, with strict adherence to safety, accuracy, and international quality standards.</p>
+  </section>
 
-<!-- WHY US -->
-<section id="why">
-<h2>Why Choose Neonox Gas Tech</h2>
-<ul>
-<li>Certified and experienced orbital welding professionals</li>
-<li>High-purity, leak-proof pipeline execution</li>
-<li>Advanced orbital welding and TIG equipment</li>
-<li>Strict safety and compliance standards</li>
-<li>On-time project delivery</li>
-<li>Cost-effective engineering solutions</li>
-</ul>
-</section>
+  <!-- WHY US -->
+  <section>
+    <h2>Why Choose Neonox Gas Tech</h2>
+    <ul>
+      <li>Certified and experienced orbital welding professionals</li>
+      <li>High-purity, leak-proof pipeline execution</li>
+      <li>Advanced orbital welding and TIG equipment</li>
+      <li>Strict safety and compliance standards</li>
+      <li>On-time project delivery</li>
+      <li>Cost-effective engineering solutions</li>
+    </ul>
+  </section>
 
-<!-- SERVICES -->
-<section id="services">
-<h2>Our Services</h2>
-<ul>
-<li>Orbital Welding (1/8” to 1/2” SS Tubes)</li>
-<li>High-Purity Stainless Steel Gas Pipelines</li>
-<li>Industrial Gas Manifold Design & Installation</li>
-<li>TIG Welding for Stainless Steel & Alloy Piping</li>
-<li>Medical Gas Pipeline Systems (MGPS)</li>
-<li>Specialty & Hazardous Gas Piping</li>
-<li>Pressure Testing, Commissioning & AMC</li>
-</ul>
-<p><strong>Gases handled:</strong> Oxygen, Nitrogen, Argon, CO₂, Hydrogen, Helium, SF₆, Carbon Monoxide, Methane, Ethylene, Hydrocarbons.</p>
-</section>
+  <!-- SERVICES -->
+  <section id="services">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Orbital Welding (1/8” to 1/2” SS Tubes)</li>
+      <li>High-Purity Stainless Steel Gas Pipelines</li>
+      <li>Industrial Gas Manifold Design & Installation</li>
+      <li>TIG Welding for Stainless Steel & Alloy Piping</li>
+      <li>Medical Gas Pipeline Systems (MGPS)</li>
+      <li>Specialty & Hazardous Gas Piping</li>
+      <li>Pressure Testing, Commissioning & AMC</li>
+    </ul>
 
-<!-- CONTACT -->
-<section id="contact">
-<h2>Contact Us</h2>
-<p>For quotations and project discussions, contact us.</p>
+    <p><strong>Gases Handled:</strong> Oxygen, Nitrogen, Argon, CO₂, Hydrogen, Helium, SF₆, Carbon Monoxide, Methane, Ethylene, Hydrocarbons.</p>
+  </section>
 
-<form action="https://formspree.io/f/xqarvayz" method="POST">
-<input type="text" name="name" placeholder="Your Name" required>
-<input type="email" name="email" placeholder="Your Email" required>
-<input type="text" name="phone" placeholder="Phone Number">
-<textarea name="message" rows="4" placeholder="Your Message" required></textarea>
-<button type="submit">Send Message</button>
-</form>
+  <!-- CONTACT -->
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Need a quotation or project support? Reach out to us.</p>
 
-<p>
-📧 neonoxgastech@gmail.com<br>
-📞 +91-8867123061<br>
-📍 India
-</p>
-</section>
+    <form action="https://formspree.io/f/xqarvayz" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <input type="text" name="phone" placeholder="Phone Number">
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
 
-<footer>
-© 2025 Neonox Gas Tech. All rights reserved.
-</footer>
+    <p style="margin-top:15px;">
+      📞 <strong>Phone:</strong> +91-8867123061<br>
+      📧 <strong>Email:</strong> neonoxgastech@gmail.com<br>
+      📍 <strong>Location:</strong> India
+    </p>
+  </section>
 
-<a class="whatsapp" href="https://wa.me/918867123061" target="_blank">
-WhatsApp Us
-</a>
+  <!-- WHATSAPP -->
+  <a class="whatsapp" href="https://wa.me/918867123061" target="_blank">
+    WhatsApp Us
+  </a>
+
+  <!-- FOOTER -->
+  <footer>
+    © 2025 Neonox Gas Tech. All Rights Reserved.
+  </footer>
 
 </body>
 </html>
