--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
   <!-- HERO -->
   <div class="hero">
-    <img src="logo-new.png" alt="Neonox Gas Tech Logo">
+    <img src="logo-new.png" alt="Neonox_Gas.png">
     <h1>Neonox Gas Tech</h1>
     <p>High-Purity Gas Pipeline Solutions with Precision Orbital Welding</p>
   </div>
